--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "./node_modules/firebase/firebase.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
