--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
+    "firebase": "^5.9.1",
     "hammerjs": "^2.0.8",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
