--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "aws-sdk": "^2.417.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "d3": "^4.10.2",
     "express": "^4.16.4",
     "firebase": "^5.9.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
