--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,7 @@
               "./node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": [
-              "./node_modules/firebase/firebase.js"
+              "./node_modules/firebase/firebase.js",
             ],
             "es5BrowserSupport": true
           },
